<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Score"
        android:textColor="@android:color/black"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:text="@string/QuestionCount"
        android:textColor="@android:color/black"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:freezesText="true"
        android:text="@string/Category"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_category"
        android:freezesText="true"
        android:text="@string/Difficulty_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="00:30"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:text="example for question text\nexample for question text\nexample for question text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_margin="1dp"
        android:freezesText="true"/>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 1"
            android:textSize="20sp"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 2"
            android:textSize="20sp"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 3"
            android:textSize="20sp"
            android:freezesText="true"/>
    </RadioGroup>


    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/radio_group"
        android:layout_margin="16dp"
        android:text="Confirm"
        android:background="@drawable/shape2"
        android:freezesText="true"/>

</RelativeLayout>